--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 		<meta charset="utf-8">
 		<link rel="shortcut icon" href="favicon.ico" />
 		<title>magichighway</title>
+		<style>
+			html, body {
+    			width:  100%;
+    			height: 100%;
+    			margin: 0;
+  			}
+		</style>
 	</head>
 	<body>
 		<script src="js/magical.js"></script>
